# calculator_with_CPP

./: README.md
src/: CMakeLists.txt  Makefile  info.texi  main.cc
src/backend/: s21_calculator.h  s21_controller.cc  s21_controller.h  s21_model.cc  s21_model.h  s21_view.cc  s21_view.h
src/frontend/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/tests/: tests.cc
